[gd_scene load_steps=2 format=2]

[ext_resource path="res://mainmenu.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.420441
margin_top = 0.420441
margin_right = 0.420441
margin_bottom = 0.420441
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.339
anchor_top = 0.413
anchor_right = 0.664
anchor_bottom = 0.668
margin_left = -0.113274
margin_top = -0.0544662
margin_right = -0.113281
margin_bottom = 0.0455322
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="VBoxContainer"]
margin_right = 129.0
margin_bottom = 20.0
text = "Start"

[node name="Button2" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 129.0
margin_bottom = 44.0
text = "exit"

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
